--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "^14.11.1",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
-  }
+  },
+  "dependencies": {}
 }
