--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.1",
     "concurrently": "^5.3.0",
+    "log-symbols": "^4.0.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "chalk": "^4.1.0",
-    "express": "^4.17.1",
-    "figures": "^3.2.0"
+    "express": "^4.17.1"
   }
 }
