--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "concurrently -k -p \"[{name}]\" -n \"typescript,node\" -c \"cyan,green\" \"yarn dev:ts\" \"yarn dev:node\""
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
     "@types/express": "^4.17.8",
     "@types/lusca": "^1.6.2",
     "@types/node": "^14.11.1",
@@ -29,6 +30,7 @@
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "lusca": "^1.6.1"
   }
 }
