--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "incremental": true
+    "incremental": true,
+    "jsx": "preserve"
   },
   "include": [
     "src/**/*"
