--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "incremental": true,
-    "jsx": "preserve"
+    "incremental": true
   },
   "include": [
     "src/**/*"
