--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "author": "delta-kor <deltakbot1@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "yarn build:ts && yarn build:parcel",
+    "build:ts": "tsc",
+    "build:parcel": "parcel build views/scripts/**/*.ts --out-dir dist/client --no-source-maps",
     "deploy": "node .",
     "start": "yarn build && yarn deploy",
     "dev:ts": "tsc -w",
     "dev:node": "nodemon",
-    "dev": "concurrently \"yarn dev:ts\" \"yarn dev:node\""
+    "dev:parcel": "parcel watch views/scripts/**/*.ts --out-dir dist/client",
+    "dev": "concurrently \"yarn dev:ts\" \"yarn dev:node\" \"yarn dev:parcel\""
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
@@ -23,6 +26,7 @@
     "concurrently": "^5.3.0",
     "log-symbols": "^4.0.0",
     "nodemon": "^2.0.4",
+    "parcel": "^1.12.4",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
