--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/lusca": "^1.6.2",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.1",
     "concurrently": "^5.3.0",
     "log-symbols": "^4.0.0",
@@ -38,6 +39,7 @@
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "lusca": "^1.6.1",
+    "mongoose": "^5.10.6",
     "pug": "^3.0.0"
   }
 }
