--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "chalk": "^4.1.0",
     "compression": "^1.7.4",
     "connect-mongo": "^3.2.0",
@@ -46,5 +47,12 @@
     "lusca": "^1.6.1",
     "mongoose": "^5.10.6",
     "pug": "^3.0.0"
-  }
+  },
+  "browserslist": [
+    "last 3 and_chr versions",
+    "last 3 chrome versions",
+    "last 3 opera versions",
+    "last 3 ios_saf versions",
+    "last 3 safari versions"
+  ]
 }
