--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/lusca": "^1.6.2",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.1",
+    "@types/validator": "^13.1.0",
     "concurrently": "^5.3.0",
     "log-symbols": "^4.0.0",
     "nodemon": "^2.0.4",
@@ -46,7 +47,8 @@
     "helmet": "^4.1.1",
     "lusca": "^1.6.1",
     "mongoose": "^5.10.6",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "validator": "^13.1.17"
   },
   "browserslist": [
     "last 3 and_chr versions",
