--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/lusca": "^1.6.2",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.1",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "@types/validator": "^13.1.0",
     "concurrently": "^5.3.0",
     "log-symbols": "^4.0.0",
@@ -49,6 +51,8 @@
     "helmet": "^4.1.1",
     "lusca": "^1.6.1",
     "mongoose": "^5.10.6",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.0",
     "validator": "^13.1.17"
   },
